; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/bluetooth/rfcomm/extr_tty.c_rfcomm_wfree.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/bluetooth/rfcomm/extr_tty.c_rfcomm_wfree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32, i64 }
%struct.rfcomm_dev = type { i32, i32, i32 }

@RFCOMM_TTY_ATTACHED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sk_buff*)* @rfcomm_wfree to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rfcomm_wfree(%struct.sk_buff* %0) #0 {
  %2 = alloca %struct.sk_buff*, align 8
  %3 = alloca %struct.rfcomm_dev*, align 8
  store %struct.sk_buff* %0, %struct.sk_buff** %2, align 8
  %4 = load %struct.sk_buff*, %struct.sk_buff** %2, align 8
  %5 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %4, i32 0, i32 1
  %6 = load i64, i64* %5, align 8
  %7 = inttoptr i64 %6 to i8*
  %8 = bitcast i8* %7 to %struct.rfcomm_dev*
  store %struct.rfcomm_dev* %8, %struct.rfcomm_dev** %3, align 8
  %9 = load %struct.sk_buff*, %struct.sk_buff** %2, align 8
  %10 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  %12 = load %struct.rfcomm_dev*, %struct.rfcomm_dev** %3, align 8
  %13 = getelementptr inbounds %struct.rfcomm_dev, %struct.rfcomm_dev* %12, i32 0, i32 2
  %14 = call i32 @atomic_sub(i32 %11, i32* %13)
  %15 = load i32, i32* @RFCOMM_TTY_ATTACHED, align 4
  %16 = load %struct.rfcomm_dev*, %struct.rfcomm_dev** %3, align 8
  %17 = getelementptr inbounds %struct.rfcomm_dev, %struct.rfcomm_dev* %16, i32 0, i32 1
  %18 = call i64 @test_bit(i32 %15, i32* %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %24

20:                                               ; preds = %1
  %21 = load %struct.rfcomm_dev*, %struct.rfcomm_dev** %3, align 8
  %22 = getelementptr inbounds %struct.rfcomm_dev, %struct.rfcomm_dev* %21, i32 0, i32 0
  %23 = call i32 @tasklet_schedule(i32* %22)
  br label %24

24:                                               ; preds = %20, %1
  %25 = load %struct.rfcomm_dev*, %struct.rfcomm_dev** %3, align 8
  %26 = call i32 @rfcomm_dev_put(%struct.rfcomm_dev* %25)
  ret void
}

declare dso_local i32 @atomic_sub(i32, i32*) #1

declare dso_local i64 @test_bit(i32, i32*) #1

declare dso_local i32 @tasklet_schedule(i32*) #1

declare dso_local i32 @rfcomm_dev_put(%struct.rfcomm_dev*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
